--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 </select>
                 <button id="startButton" disabled>측정 시작</button>
                 <button id="stopButton" disabled>측정 종료</button>
+                <button id="calibrateButton">검교정</button>
                 <div id="decibelDisplay">-- dB</div>
                 <canvas id="decibelChart"></canvas>
             </div>
